<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainfraglayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|end"
        android:scaleType="center"
        android:src="@drawable/ic_add_photo"
        app:backgroundTint="#CCCCCC" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/main_description"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="37dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/main_description_2"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/main_fragment_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/main_fragment_button"
        android:layout_alignEnd="@+id/fragfab"
        android:layout_alignRight="@+id/fragfab"
        android:hint="@string/edit_message" />

    <Button
        android:id="@+id/main_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="53dp"
        android:layout_toEndOf="@+id/main_fragment_edittext"
        android:layout_toRightOf="@+id/main_fragment_edittext"
        android:background="@drawable/go_button"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/file_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_fragment_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="BROWSE GALLERY" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file_button"
        android:layout_centerHorizontal="true"
        android:text="or"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</RelativeLayout>